--- a/src/components/ScrollToTopArrow.css
+++ b/src/components/ScrollToTopArrow.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 70px;
     right: 30px;
-    background-color: #80adb7;
+    background-color: #ffffff;
     color: #444141;
     border: none;
     border-radius: 50%;
